...
            <com.crux.view.base.CruxImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <com.crux.view.base.CruxTextView
                android:id="@+id/title"
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:layout_marginTop="@dimen/padding_top"
                android:textColor="@android:color/black" />
...
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.crux.view.base.CruxButton
            android:id="@+id/button_cart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="40"
            android:background="@drawable/selector_button_add_cart"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white" />
...
